force-app/main/default/objects/Lead/fields/Capital__c.field-meta.xml
<CustomField>
    <fullName>Capital__c</fullName>
    <formula>Country__r.Capital__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capital</label>
    <type>Text</type>
</CustomField>