force-app/main/default/objects/Lead/fields/ISOCode2__c.field-meta.xml
<CustomField>
    <fullName>ISOCode2__c</fullName>
    <formula>Country__r.ISOCode2__c</formula>
    <label>ISO Code 2</label>
    <type>Text</type>
</CustomField>