force-app/main/default/objects/Lead/fields/ISOCode3__c.field-meta.xml
<CustomField>
    <fullName>ISOCode3__c</fullName>
    <formula>Country__r.ISOCode3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ISO Code 3</label>
    <type>Text</type>
</CustomField>