force-app/main/default/objects/Lead/validationRules/OwnerChangeAdmin.validationRule-meta.xml
<ValidationRule>
    <fullName>OwnerChangeAdmin</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( OwnerId )&amp;&amp; $Permission.LeadOwnerChangeForSystemAdministrator &amp;&amp; ISPICKVAL( LeadSource,&quot;&quot; )</errorConditionFormula>
    <errorDisplayField>LeadSource</errorDisplayField>
    <errorMessage>Lead Source can not be blank when Lead Owner is changed by System Administrator</errorMessage>
</ValidationRule>