force-app/main/default/objects/Lead/validationRules/OwnerChangeContractManager.validationRule-meta.xml
<ValidationRule>
    <fullName>OwnerChangeContractManager</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( OwnerId )
&amp;&amp; $Permission.LeadOwnerChangeForContractManager
&amp;&amp; (ISBLANK( Country ) || ISPICKVAL( LeadSource,&quot;&quot; ))</errorConditionFormula>
    <errorMessage>Country and Lead Source can not be blank when Lead Owner is changed by Contract Manager.</errorMessage>
</ValidationRule>