force-app/main/default/objects/Lead/validationRules/OwnerChangeExceptAdminAndContractManager.validationRule-meta.xml
<ValidationRule>
    <fullName>OwnerChangeExceptAdminAndContractManager</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( OwnerId ) 
&amp;&amp; (NOT( $Permission.LeadOwnerChangeForContractManager || $Permission.LeadOwnerChangeForSystemAdministrator )) 
&amp;&amp; (ISBLANK( Country ) || ISPICKVAL( LeadSource,&quot;&quot; ) || ISBLANK( NumberOfEmployees ))</errorConditionFormula>
    <errorMessage>Country, Lead Source and No of Employees can not be blank when Lead Owner is changed.</errorMessage>
</ValidationRule>